# xamalk

./: main.py
libs/: CMakeLists.txt  make.bat  make.sh
libs/include/: events.h  renderer.h
libs/src/events/: dllmain.c  events.c  test.c
libs/src/renderer/: dllmain.c  renderer.c  test.c
tests/: bindings.py  colors.py  connect.py  resize.py
xamalk/: __init__.py  events.py  renderer.py  widgets.py
